workspace/MJCompiler/test/semanticerrors/constants.mj
program constants

	const int nula = 0, jedan = 1, pet = 5; // ok constante
	
	const bool radi = true, neradi = 2; // ne ok constante
	
	const char slovoa = 'a', slovob =15; //ne ok constante 
	
	const int tri = 'v'; //not ok constante
	
	const char slovob = 'b';
{

		void main()	{
		
		nula = 7;   // not ok constante ne mogu da se menjaju
		
		tri = 3;   // not ok constanta nece biti deklarisana zbog greske 
		
			
		}

}